# gygax

./: .gitignore  README.md  pyproject.toml
data/: monster_descriptions.json
src/gygax/: embed.py  extract.py  fetch.py
